# hyperhire-chat

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  test_users.json
.github/workflows/: test.yml
chat/: consumers.py  models.py  tests.py  urls.py  views.py
chat/api/: urls.py  viewsets.py
chat/migrations/: 0001_initial.py
chat/repository/: constants.py  crud.py  schemas.py  serializers.py
chat/templates/chat/: room.html
hyperhire/: asgi.py  settings.py  urls.py  wsgi.py
